--- a/hassio-addon/translations/en.yaml
+++ b/hassio-addon/translations/en.yaml
@@ -7,5 +7,5 @@ configuration:
     description: "If enabled, forwards messages from the cloud MQTT broker to the local MQTT broker instead of the other way around"
   devices:
     name: Devices
-    description: "List of forwarding devices"
+    description: "List of forwarding devices. Information can be obtained here: https://eu.hamedata.com/app/AfterSales/login.html"
 
