--- a/hassio-addon/translations/de.yaml
+++ b/hassio-addon/translations/de.yaml
@@ -4,14 +4,13 @@ configuration:
     description: "URL des MQTT-Brokers, mit dem verbunden werden soll"
   inverse_forwarding:
     name: "Globale Weiterleitungsumkehr"
-    description: "Wenn aktiviert, wird die Weiterleitungsrichtung für alle Geräte umgekehrt. Sollte normalerweise ausgeschaltet sein. Verwenden Sie dies, um die Weiterleitungsrichtung global für Tests oder spezielle Konfigurationen umzukehren."
+    description: "Wenn aktiviert, wird die Weiterleitungsrichtung für alle Geräte umgekehrt. Nicht aktivieren, es sei denn, du weißt absolut, was du tust. Fehlerberichte mit aktivierter Einstellung werden sofort geschlossen."
   username:
     name: "Hame Benutzername"
-    description: "E-Mail-Adresse für das Hame Energy Management System (erforderlich). Geräteinformationen werden automatisch aus Ihrem Konto abgerufen."
+    description: "E-Mail-Adresse für das Hame Energy Management System (erforderlich). Geräteinformationen werden automatisch aus deinem Konto abgerufen."
   password:
     name: "Hame Passwort"
     description: "Passwort für das Hame Energy Management System (erforderlich)"
   inverse_forwarding_device_ids:
     name: "Selektive Weiterleitungsumkehr Geräte-IDs"
     description: "Kommagetrennte Liste von Geräte-IDs für HMA-, HMF-, HMK- und HMJ-Geräte, die inverse Weiterleitung verwenden sollen. Andere Gerätetypen verwenden automatisch inverse Weiterleitung."
-
